<resources>
    <string name="app_name">小倉老師</string>
    <string name="confirm">確定</string>
    <string name="cancel">取消</string>
    <string name="error">錯誤</string>
    <string name="noNetwork">沒有網絡</string>
    <string name="appbar_scrolling_view_behavior"></string>
    <string name="hi">你好</string>

    <string name="search">查詢</string>
    <string name="inbound">入庫</string>
    <string name="outbound">出庫</string>
    <string name="damage">壞貨</string>
    <string name="others">其他</string>
    <string name="takePhoto">拍照</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="permission_camera_denied">permission_camera_denied</string>
    <string name="permission_camera_neverask">permission_camera_neverask</string>

    <string name="permission_external_storage_denied">permission_external_storage_denied</string>
    <string name="permission_external_storage_neverask">permission_external_storage_neverask</string>

    <string name="button_allow">button_allow</string>
    <string name="button_deny">button_deny</string>
    <string name="permission_camera_rationale">permission_camera_rationale</string>

    <string name="SKU">SKU</string>
    <string name="OrderNo">Order No</string>
    <string name="LotNo">Lot No</string>
    <string name="LPN">LPN</string>

    <string-array name="type_array">
        <item>@string/inbound</item>
        <item>@string/outbound</item>
        <item>@string/damage</item>
        <item>@string/others</item>
    </string-array>

    <string name="type">種類</string>
    <string name="options">設定</string>
    <string name="postCapture">發佈</string>
    <string name="ImageName">描述</string>
    <string name="Remarks">備註</string>

    <string name="noAllowEmpty">不能為空</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
